Generate qiskit-addon-cutting v0.10.0 (#2876)
Commands:

```bash
npm run gen-api -- -p qiskit-addon-cutting -b 0.9.0 --historical
npm run gen-api -- -p qiskit-addon-cutting -v 0.10.0
```

--- a/docs/api/qiskit-addon-cutting/0.9/index.mdx
+++ b/docs/api/qiskit-addon-cutting/0.9/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Circuit cutting API documentation (latest version)
-description: Index of all the modules in the latest version of qiskit-addon-cutting.
+title: Circuit cutting API documentation (v0.9)
+description: Index of all the modules in qiskit-addon-cutting v0.9.
 ---
 
 <span id="qiskit-addon-cutting-api-reference" />
@@ -13,7 +13,6 @@ description: Index of all the modules in the latest version of qiskit-addon-cutt
 *   [Bitwise utilities (`qiskit_addon_cutting.utils.bitwise`)](utils-bitwise)
 *   [Iteration utilities (`qiskit_addon_cutting.utils.iteration`)](utils-iteration)
 *   [Observable grouping (`qiskit_addon_cutting.utils.observable_grouping`)](utils-observable-grouping)
-*   [Observable terms (`qiskit_addon_cutting.utils.observable_terms`)](utils-observable-terms)
 *   [Simulation utilities (`qiskit_addon_cutting.utils.simulation`)](utils-simulation)
 *   [Transforms (`qiskit_addon_cutting.utils.transforms`)](utils-transforms)
 *   [Transpiler passes (`qiskit_addon_cutting.utils.transpiler_passes`)](utils-transpiler-passes)
