--- a/docs/api/qiskit-addon-cutting/0.9/instructions-cut-wire.mdx
+++ b/docs/api/qiskit-addon-cutting/0.9/instructions-cut-wire.mdx
@@ -1,6 +1,6 @@
 ---
-title: CutWire (latest version)
-description: API reference for qiskit_addon_cutting.instructions.CutWire in the latest version of qiskit-addon-cutting
+title: CutWire (v0.9)
+description: API reference for qiskit_addon_cutting.instructions.CutWire in qiskit-addon-cutting v0.9
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_addon_cutting.instructions.CutWire
@@ -8,8 +8,8 @@ python_api_name: qiskit_addon_cutting.instructions.CutWire
 
 # CutWire
 
-<Class id="qiskit_addon_cutting.instructions.CutWire" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-cutting/tree/stable/0.10/qiskit_addon_cutting/instructions/cut_wire.py" signature="CutWire(label=None)" modifiers="class">
-  Bases: [`Gate`](/api/qiskit/qiskit.circuit.Gate "(in Qiskit v1.4)")
+<Class id="qiskit_addon_cutting.instructions.CutWire" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-cutting/tree/stable/0.9/qiskit_addon_cutting/instructions/cut_wire.py" signature="CutWire(label=None)" modifiers="class">
+  Bases: [`Gate`](/api/qiskit/qiskit.circuit.Gate "(in Qiskit v1.3)")
 
   An instruction for denoting a wire cut location.
 
@@ -255,7 +255,7 @@ python_api_name: qiskit_addon_cutting.instructions.CutWire
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.3)")
   </Function>
 
   ### inverse
@@ -285,7 +285,7 @@ python_api_name: qiskit_addon_cutting.instructions.CutWire
   ### is\_parameterized
 
   <Function id="qiskit_addon_cutting.instructions.CutWire.is_parameterized" signature="is_parameterized()">
-    Return whether the `Instruction` contains [compile-time parameters](/api/qiskit/circuit#circuit-compile-time-parameters "(in Qiskit v1.4)").
+    Return whether the `Instruction` contains [compile-time parameters](/api/qiskit/circuit#circuit-compile-time-parameters "(in Qiskit v1.3)").
   </Function>
 
   ### power
@@ -326,7 +326,7 @@ python_api_name: qiskit_addon_cutting.instructions.CutWire
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.3)")
 
     **Raises**
 
@@ -348,7 +348,7 @@ python_api_name: qiskit_addon_cutting.instructions.CutWire
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.3)")
   </Function>
 
   ### soft\_compare
