--- a/docs/api/qiskit-addon-cutting/0.9/qpd-base-qpd-gate.mdx
+++ b/docs/api/qiskit-addon-cutting/0.9/qpd-base-qpd-gate.mdx
@@ -1,41 +1,36 @@
 ---
-title: SingleQubitQPDGate (latest version)
-description: API reference for qiskit_addon_cutting.qpd.SingleQubitQPDGate in the latest version of qiskit-addon-cutting
+title: BaseQPDGate (v0.9)
+description: API reference for qiskit_addon_cutting.qpd.BaseQPDGate in qiskit-addon-cutting v0.9
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
+python_api_name: qiskit_addon_cutting.qpd.BaseQPDGate
 ---
 
-# SingleQubitQPDGate
+# BaseQPDGate
 
-<Class id="qiskit_addon_cutting.qpd.SingleQubitQPDGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-cutting/tree/stable/0.10/qiskit_addon_cutting/qpd/instructions/qpd_gate.py" signature="SingleQubitQPDGate(basis, qubit_id, *, basis_id=None, label=None)" modifiers="class">
-  Bases: [`BaseQPDGate`](qpd-base-qpd-gate "qiskit_addon_cutting.qpd.instructions.qpd_gate.BaseQPDGate")
+<Class id="qiskit_addon_cutting.qpd.BaseQPDGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-cutting/tree/stable/0.9/qiskit_addon_cutting/qpd/instructions/qpd_gate.py" signature="BaseQPDGate(name, basis, num_qubits, *, basis_id=None, label=None)" modifiers="class">
+  Bases: [`Instruction`](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.3)")
 
-  Single qubit gate to be decomposed using quasiprobability decomposition.
+  Base class for a gate to be decomposed using quasiprobability decomposition.
 
-  This gate could be part of a larger decomposition on many qubits, or it could be a standalone single gate decomposition.
-
-  Initialize the single qubit QPD gate, and assign member variables.
+  Initialize the instruction, and assign member variables.
 
   **Parameters**
 
+  *   **name** (str) – Name of the QPD gate.
   *   **basis** (QPDBasis) – A `QPDBasis` to which the gate should be decomposed
-  *   **qubit\_id** (int) – This gate’s relative index to the decomposition which it belongs. Single qubit QPDGates should have qubit\_id 0 if they describe a local decomposition, such as a wire cut.
+  *   **num\_qubits** (int) – The number of qubits on which the QPD gate acts
   *   **basis\_id** (int | None) – An index to the basis to which the gate should be decomposed. This index is to `basis.maps`.
   *   **label** (str | None) – An optional label for the gate
-
-  **Raises**
-
-  [**ValueError**](https://docs.python.org/3/library/exceptions.html#ValueError "(in Python v3.13)") – qubit\_id is out of range
 
   ## Attributes
 
   ### base\_class
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.base_class">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.base_class">
     Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.
 
-    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioral perspective. In particular, you should *not* override [`base_class`](#qiskit_addon_cutting.qpd.SingleQubitQPDGate.base_class "qiskit_addon_cutting.qpd.SingleQubitQPDGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrized gate with a particular set of parameters for the purposes of distinguishing it in a `Target` from the full parametrized gate.
+    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioral perspective. In particular, you should *not* override [`base_class`](#qiskit_addon_cutting.qpd.BaseQPDGate.base_class "qiskit_addon_cutting.qpd.BaseQPDGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrized gate with a particular set of parameters for the purposes of distinguishing it in a `Target` from the full parametrized gate.
 
     This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:
 
@@ -53,7 +48,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### basis
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.basis">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.basis">
     Quasiprobability decomposition basis.
 
     **Returns**
@@ -63,7 +58,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### basis\_id
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.basis_id">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.basis_id">
     Index to basis used to decompose this gate.
 
     If set to None, a random basis will be chosen during decomposition.
@@ -75,7 +70,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### condition
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.condition">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.condition">
     The classical condition on the instruction.
 
     <Admonition title="Deprecated since version 1.3.0" type="danger">
@@ -85,7 +80,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### condition\_bits
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.condition_bits">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.condition_bits">
     Get Clbits in condition.
 
     <Admonition title="Deprecated since version 1.3.0" type="danger">
@@ -95,19 +90,19 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### decompositions
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.decompositions">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.decompositions">
     Get the decompositions of the instruction from the SessionEquivalenceLibrary.
   </Attribute>
 
   ### definition
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.definition">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.definition">
     Return definition in terms of other basic gates.
   </Attribute>
 
   ### duration
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.duration">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.duration">
     Get the duration.
 
     <Admonition title="Deprecated since version 1.3.0" type="danger">
@@ -117,13 +112,13 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### label
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.label">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.label">
     Return instruction label
   </Attribute>
 
   ### mutable
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.mutable">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.mutable">
     Is this instance is a mutable unique instance or not.
 
     If this attribute is `False` the gate instance is a shared singleton and is not mutable.
@@ -131,37 +126,31 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### name
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.name">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.name">
     Return the name.
   </Attribute>
 
   ### num\_clbits
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.num_clbits">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.num_clbits">
     Return the number of clbits.
   </Attribute>
 
   ### num\_qubits
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.num_qubits">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.num_qubits">
     Return the number of qubits.
   </Attribute>
 
   ### params
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.params">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.params">
     The parameters of this `Instruction`. Ideally these will be gate angles.
-  </Attribute>
-
-  ### qubit\_id
-
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.qubit_id">
-    Relative qubit index of this gate in the overall decomposition.
   </Attribute>
 
   ### unit
 
-  <Attribute id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.unit">
+  <Attribute id="qiskit_addon_cutting.qpd.BaseQPDGate.unit">
     Get the time unit of duration.
 
     <Admonition title="Deprecated since version 1.3.0" type="danger">
@@ -173,13 +162,13 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### add\_decomposition
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.add_decomposition" signature="add_decomposition(decomposition)">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.add_decomposition" signature="add_decomposition(decomposition)">
     Add a decomposition of the instruction to the SessionEquivalenceLibrary.
   </Function>
 
   ### assemble
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.assemble" signature="assemble()">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.assemble" signature="assemble()">
     Assemble a QasmQobjInstruction
 
     <Admonition title="Deprecated since version 1.2" type="danger">
@@ -189,7 +178,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### broadcast\_arguments
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
     Validation of the arguments.
 
     **Parameters**
@@ -208,7 +197,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### c\_if
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.c_if" signature="c_if(classical, val)">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.c_if" signature="c_if(classical, val)">
     Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.
 
     <Admonition title="Note" type="note">
@@ -222,7 +211,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### copy
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.copy" signature="copy(name=None)">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.copy" signature="copy(name=None)">
     Copy of the instruction.
 
     **Parameters**
@@ -235,12 +224,12 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.3)")
   </Function>
 
   ### inverse
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.inverse" signature="inverse(annotated=False)">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.inverse" signature="inverse(annotated=False)">
     Invert this instruction.
 
     If annotated is False, the inverse instruction is implemented as a fresh instruction with the recursively inverted definition.
@@ -264,13 +253,13 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### is\_parameterized
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.is_parameterized" signature="is_parameterized()">
-    Return whether the `Instruction` contains [compile-time parameters](/api/qiskit/circuit#circuit-compile-time-parameters "(in Qiskit v1.4)").
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.is_parameterized" signature="is_parameterized()">
+    Return whether the `Instruction` contains [compile-time parameters](/api/qiskit/circuit#circuit-compile-time-parameters "(in Qiskit v1.3)").
   </Function>
 
   ### repeat
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.repeat" signature="repeat(n)">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.repeat" signature="repeat(n)">
     Creates an instruction with `self` repeated :math\`n\` times.
 
     If this operation has a conditional, the output instruction will have the same conditional and the inner repeated operations will be unconditional; instructions within a compound definition cannot be conditioned on registers within Qiskit’s data model. This means that it is not valid to apply a repeated instruction to a clbit that it both writes to and reads from in its condition.
@@ -285,7 +274,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.3)")
 
     **Raises**
 
@@ -294,7 +283,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### reverse\_ops
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.reverse_ops" signature="reverse_ops()">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.reverse_ops" signature="reverse_ops()">
     For a composite instruction, reverse the order of sub-instructions.
 
     This is done by recursively reversing all sub-instructions. It does not invert any gate.
@@ -307,12 +296,12 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.3)")
   </Function>
 
   ### soft\_compare
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.soft_compare" signature="soft_compare(other)">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.soft_compare" signature="soft_compare(other)">
     Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.
 
     **Parameters**
@@ -330,7 +319,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### to\_mutable
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.to_mutable" signature="to_mutable()">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.to_mutable" signature="to_mutable()">
     Return a mutable copy of this gate.
 
     This method will return a new mutable copy of this gate instance. If a singleton instance is being used this will be a new unique instance that can be mutated. If the instance is already mutable it will be a deepcopy of that instance.
@@ -338,7 +327,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
   ### validate\_parameter
 
-  <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.validate_parameter" signature="validate_parameter(parameter)">
+  <Function id="qiskit_addon_cutting.qpd.BaseQPDGate.validate_parameter" signature="validate_parameter(parameter)">
     Instruction parameters has no validation or normalization.
   </Function>
 </Class>
