--- a/docs/api/qiskit-addon-cutting/0.9/qpd-single-qubit-qpd-gate.mdx
+++ b/docs/api/qiskit-addon-cutting/0.9/qpd-single-qubit-qpd-gate.mdx
@@ -1,6 +1,6 @@
 ---
-title: SingleQubitQPDGate (latest version)
-description: API reference for qiskit_addon_cutting.qpd.SingleQubitQPDGate in the latest version of qiskit-addon-cutting
+title: SingleQubitQPDGate (v0.9)
+description: API reference for qiskit_addon_cutting.qpd.SingleQubitQPDGate in qiskit-addon-cutting v0.9
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
@@ -8,7 +8,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
 # SingleQubitQPDGate
 
-<Class id="qiskit_addon_cutting.qpd.SingleQubitQPDGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-cutting/tree/stable/0.10/qiskit_addon_cutting/qpd/instructions/qpd_gate.py" signature="SingleQubitQPDGate(basis, qubit_id, *, basis_id=None, label=None)" modifiers="class">
+<Class id="qiskit_addon_cutting.qpd.SingleQubitQPDGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-cutting/tree/stable/0.9/qiskit_addon_cutting/qpd/instructions/qpd_gate.py" signature="SingleQubitQPDGate(basis, qubit_id, *, basis_id=None, label=None)" modifiers="class">
   Bases: [`BaseQPDGate`](qpd-base-qpd-gate "qiskit_addon_cutting.qpd.instructions.qpd_gate.BaseQPDGate")
 
   Single qubit gate to be decomposed using quasiprobability decomposition.
@@ -235,7 +235,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.3)")
   </Function>
 
   ### inverse
@@ -265,7 +265,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
   ### is\_parameterized
 
   <Function id="qiskit_addon_cutting.qpd.SingleQubitQPDGate.is_parameterized" signature="is_parameterized()">
-    Return whether the `Instruction` contains [compile-time parameters](/api/qiskit/circuit#circuit-compile-time-parameters "(in Qiskit v1.4)").
+    Return whether the `Instruction` contains [compile-time parameters](/api/qiskit/circuit#circuit-compile-time-parameters "(in Qiskit v1.3)").
   </Function>
 
   ### repeat
@@ -285,7 +285,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.3)")
 
     **Raises**
 
@@ -307,7 +307,7 @@ python_api_name: qiskit_addon_cutting.qpd.SingleQubitQPDGate
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.3)")
   </Function>
 
   ### soft\_compare
