--- a/docs/api/qiskit-addon-cutting/0.9/utils-bitwise.mdx
+++ b/docs/api/qiskit-addon-cutting/0.9/utils-bitwise.mdx
@@ -1,6 +1,6 @@
 ---
-title: bitwise (latest version)
-description: API reference for qiskit_addon_cutting.utils.bitwise in the latest version of qiskit-addon-cutting
+title: bitwise (v0.9)
+description: API reference for qiskit_addon_cutting.utils.bitwise in qiskit-addon-cutting v0.9
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_addon_cutting.utils.bitwise
@@ -18,7 +18,7 @@ Module for bitwise utilities.
 
 ### bit\_count
 
-<Function id="qiskit_addon_cutting.utils.bitwise.bit_count" github="https://github.com/Qiskit/qiskit-addon-cutting/tree/stable/0.10/qiskit_addon_cutting/utils/bitwise.py" signature="bit_count(x, /)">
+<Function id="qiskit_addon_cutting.utils.bitwise.bit_count" github="https://github.com/Qiskit/qiskit-addon-cutting/tree/stable/0.9/qiskit_addon_cutting/utils/bitwise.py" signature="bit_count(x, /)">
   Count number of set bits.
 
   **Parameters**
