--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -330,7 +330,9 @@
     }
    ],
    "source": [
-    "print(f\"The estimated QPU time for this PUB is: \\n{time_estimate_result[0].metadata}\")"
+    "print(\n",
+    "    f\"The estimated QPU time for this PUB is: \\n{time_estimate_result[0].metadata}\"\n",
+    ")"
    ]
   },
   {
@@ -427,7 +429,7 @@
  "metadata": {
   "description": "Run quantum circuits on noisy QPUs to obtain highly accurate error-free results with highly efficient QPU-time overheads, close to fundamental bounds.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test-2.0",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -441,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "QESEM - A Qiskit Function by Qedma"
  },
