Apply suggestions from code review
Co-authored-by: Matthew Treinish <mtreinish@kortar.org>

--- a/docs/guides/install-c-api.mdx
+++ b/docs/guides/install-c-api.mdx
@@ -40,9 +40,9 @@ int main(int argc, char* argv[]) {
 }
 ```
 
-## UNIX
+## UNIX-like
 
-This section provides build instructions for UNIX systems.
+This section provides build instructions for UNIX-like systems.
 
 ### Requirements
 
