--- a/docs/guides/install-c-api.mdx
+++ b/docs/guides/install-c-api.mdx
@@ -47,7 +47,7 @@ This section provides build instructions for UNIX-like systems.
 ### Requirements
 
 Compilation requires the following tools:
-* A Rust compiler: see for example the [guide on installing Qiskit from source](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md#installing-qiskit-from-source)
+* A Rust compiler: see for example the [guide on installing Qiskit from source](/guides/install-qiskit-source)
 * A C compiler: for example, GCC on Linux and Clang on MacOS
 * [`cbindgen`](https://github.com/mozilla/cbindgen): a tool to crate the C header, which you can install with `cargo install cbindgen`
     Note that running the tool from the command line should be enabled, which might require exporting your `PATH` variable to include `/path/to/.cargo/bin`
