--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -39,7 +39,7 @@ This plan is recommended for those who want to execute a strategic quantum roadm
 <Admonition type="tip" title="Recommendations">
   -  Understand what counts as [usage.](estimate-job-run-time)
   -  Learn about the [fair-share scheduler](fair-share-scheduler)
-  -  Access instances by creating [instances.](instances)
+  -  Access plans by creating [instances.](instances)
   -  [Upgrade fromthe Open Plan.](upgrade-from-open)
 </Admonition>
 
